--- a/login.html
+++ b/login.html
@@ -17,6 +17,7 @@
 
       <button type="submit" name="submit">Login</button>
       <p>New User?  <a href="http://localhost/regisform/regis.php">Register here!</a></p>
+      <p>Records  <a href="http://localhost/regisform/view.php">To view, click here!</a></p>
     </div>
 </form>
 </body>
