--- a/regis.html
+++ b/regis.html
@@ -33,6 +33,7 @@
 
       <button type="submit" name="submit">Register</button>
       <p>Already have an account?  <a href="http://localhost/regisform/login.php">Login here!</a></p>
+       <p>Records  <a href="http://localhost/regisform/view.php">To view, click here!</a></p>
     </div>
 </form>
 </body>
